2009-12-21 Gökçen Eraslan <gokcen@pardus.org.tr>
		* pisi/actionsapi/cmaketools.py: Change CMake build type to
		RelWithDebInfo to get faster KDE packages.

2009-12-21 Fatih Aşıcı <fatih@pardus.org.tr>
		* pisi/cli/history.py: Fix exceptions raise after quitting history view.

2009-12-16 Serdar Dalgıç <serdar@pardus.org.tr>
		* pisi/cli/blame.py: Several enhancements in blame:
			- pisi bl works for LC_ALL=C
			- a new option "-a" / "--print-all": blame for all of the releases

2009-12-16 Serdar Dalgıç <serdar@pardus.org.tr>
		* pisi/operations/build.py: Warn if component.xml is not found in the
		upper directory, tag the source as a part of unknown component.

2009-12-15 Faik Uygur <faik@pardus.org.tr>
		* pisi/component.py (Component): Make LocalName, Summary and
		Description optional for cleaning up component.xml files in the
		repository.

2009-12-14 Serdar Dalgıç <serdar@pardus.org.tr>
		*	Add architecture and distribution release check to pisi add-repo
		New parameter --ignore-check is added to pisi ar too.

2009-12-11 Serdar Dalgıç <serdar@pardus.org.tr>
		* pisi/operations/install.py: Check individual packages' Distribution
		Release and architecture properties before installing them.

2009-12-09 Serdar Dalgıç <serdar@pardus.org.tr>
		* pisi/specfile.py: Raise meaningful warning when translations.xml has
		invalid XML, closes bug #8969

2009-12-08 Bahadır Kandemir <bahadir@pardus.org.tr>
		* pisi/atomicoperations.py: Add package name to needs{Restart,Reboot}
		list if an update requires one of these actions.

2009-12-07 Bahadır Kandemir <bahadir@pardus.org.tr>
		* pisi/api.py, pisi/db/install.db, pisi/constants.py: Install DB
		changes and API methods for needs{Restart,Reboot} feature.

2009-12-04 Bahadır Kandemir <bahadir@pardus.org.tr>
		* pisi/scenarioapi/pspec.py: Reverted AnyDependency changes.

2009-12-04 Bahadır Kandemir <bahadir@pardus.org.tr>
		* pisi/scenarioapi/package.py: Fixed repo_version_bumped() ignoring
		with_version() argument.
